--- a/404.html
+++ b/404.html
@@ -9,10 +9,11 @@
   <body>
     <navbar>
       <ul>
-        <li><a href="./index.html">Home</a></li>
-        <li><a href="./about.html">About Me</a></li>
-        <li><a href="./contact-me.html">Contact Me</a></li>
+        <li><a href="index">Home</a></li>
+        <li><a href="about">About Me</a></li>
+        <li><a href="contact-me">Contact Me</a></li>
       </ul>
     </navbar>
+    <h1>Lol you're lost</h1>
   </body>
 </html>
